# anidb_titles

./: Cargo.toml  README.md
src/: elastic.rs  error.rs  lib.rs  main.rs
src/elastic/: mod.rs
