[package]
name = "anidb_titles"
version = "0.1.0"
authors = ["Walfie <walfington@gmail.com>"]

[dependencies]
error-chain = "0.9"
csv = "0.15"
time = { version = "0.1", optional = true }
serde = { version = "0.9", optional = true }
serde_derive = { version = "0.9", optional = true }
serde_json = { version = "0.9", optional = true }
reqwest = { version = "0.4", optional = true }
itertools = { version = "0.5", optional = true }
clubdarn = { git = "https://github.com/walfie/clubdarn", rev = "8e89dd23e5673cd5f2d0ecd2d24737e70ddcea65" }

[features]
default = ["elasticsearch"]
elasticsearch = ["serde", "serde_derive", "serde_json", "reqwest", "time", "itertools"]


