[package]
name = "clubdam_anidb_indexer"
version = "0.1.0"
authors = ["Walfie <walfington@gmail.com>"]

[dependencies]
error-chain = "0.9"
csv = "0.15"
time = "0.1"
serde = "0.9"
serde_derive = "0.9"
serde_json = "0.9"
reqwest = "0.4"
itertools = "0.5"
clubdarn = { git = "https://github.com/walfie/clubdarn", rev = "8e89dd23e5673cd5f2d0ecd2d24737e70ddcea65" }

[features]
default = []

